force-app/main/default/objects/Purchase_Row__c/Purchase_Row__c.object-meta.xml
<CustomObject>
    <label>Purchase Row</label>
    <nameField>
        <label>Purchase Row Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Row</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>