force-app/main/default/objects/Purchase_Row__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <label>Barcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>