force-app/main/default/objects/Purchase_Row__c/fields/Barcode_Type__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Type__c</fullName>
    <label>Barcode Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>