force-app/main/default/objects/Purchase_Row__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>