force-app/main/default/objects/Purchase_Row__c/fields/Made_in_country__c.field-meta.xml
<CustomField>
    <fullName>Made_in_country__c</fullName>
    <label>Made in country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>