force-app/main/default/objects/Purchase_Row__c/fields/Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>Order Item Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>