force-app/main/default/objects/Purchase_Row__c/fields/Order_Item_no__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_no__c</fullName>
    <label>Order Item no</label>
    <length>10</length>
    <type>Text</type>
</CustomField>