force-app/main/default/objects/Purchase_Row__c/fields/Original_Sale_Row__c.field-meta.xml
<CustomField>
    <fullName>Original_Sale_Row__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Sale Row</label>
    <referenceTo>Purchase_Row__c</referenceTo>
    <relationshipLabel>Purchase Row</relationshipLabel>
    <relationshipName>Purchase_Row</relationshipName>
    <type>Lookup</type>
</CustomField>