force-app/main/default/objects/Purchase_Row__c/fields/Purchase_Header__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Header__c</fullName>
    <label>Purchase Header</label>
    <referenceTo>Purchase_Header__c</referenceTo>
    <relationshipLabel>Purchase Row</relationshipLabel>
    <relationshipName>Purchase_Row</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>