force-app/main/default/objects/Purchase_Row__c/fields/Reassigned_Sales_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Sales_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassigned Sales Assistant</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Purchase Row</relationshipLabel>
    <relationshipName>Purchase_Row</relationshipName>
    <type>Lookup</type>
</CustomField>