force-app/main/default/objects/Purchase_Row__c/fields/Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price__c</fullName>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>