force-app/main/default/objects/Purchase_Row__c/fields/Retail_Product__c.field-meta.xml
<CustomField>
    <fullName>Retail_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Purchase Row</relationshipLabel>
    <relationshipName>Purchase_Row</relationshipName>
    <type>Lookup</type>
</CustomField>