force-app/main/default/objects/Purchase_Row__c/fields/Sales_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Sales_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Assistant</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Purchase Row (Sales Assistant)</relationshipLabel>
    <relationshipName>Purchase_Row1</relationshipName>
    <type>Lookup</type>
</CustomField>