force-app/main/default/objects/Purchase_Row__c/fields/Sales_Return__c.field-meta.xml
<CustomField>
    <fullName>Sales_Return__c</fullName>
    <label>Sales / Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>225540000</fullName>
                <label>Purchase</label>
            </value>
            <value>
                <fullName>225540001</fullName>
                <label>Rendered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>