force-app/main/default/objects/Purchase_Row__c/fields/Season_Year__c.field-meta.xml
<CustomField>
    <fullName>Season_Year__c</fullName>
    <label>Season Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>