force-app/main/default/objects/Purchase_Row__c/fields/Sell_in_cost__c.field-meta.xml
<CustomField>
    <fullName>Sell_in_cost__c</fullName>
    <label>Sell in cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>