force-app/main/default/objects/Purchase_Row__c/fields/Shipping_Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Tracking_Link__c</fullName>
    <label>Shipping Tracking Link</label>
    <type>Url</type>
</CustomField>