force-app/main/default/objects/Purchase_Row__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Shipped</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Returned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>