force-app/main/default/objects/Purchase_Row__c/fields/Tax1__c.field-meta.xml
<CustomField>
    <fullName>Tax1__c</fullName>
    <label>Tax 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>