force-app/main/default/objects/Purchase_Row__c/fields/Tax2__c.field-meta.xml
<CustomField>
    <fullName>Tax2__c</fullName>
    <label>Tax 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>